# Rarrow

./: .gitignore  DESCRIPTION  NAMESPACE  README.md  configure  configure.ac  generate.md  issues.md  test.cc
R/: arrow123.R  l2norm.R
TU/: arrow.cc  tu.R
scratch/: arrow123.cc  issues.md
src/: Makevars  Makevars.in  Rarrow.cc  Rarrow.cpp  arrow123.cc  l2norm.cc
